kubernetes/production/nginx-helloworld/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-helloworld
  namespace: nginx-helloworld
  labels:
    app: nginx-helloworld
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-helloworld
  template:
    metadata:
      labels:
        app: nginx-helloworld
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
        ports:
        - containerPort: 80
          name: http
        volumeMounts:
        - name: html
          mountPath: /usr/share/nginx/html
      volumes:
      - name: html
        emptyDir: {}
