kubernetes/production/nginx-helloworld/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-helloworld
  namespace: nginx-helloworld
spec:
  selector:
    app: nginx-helloworld
  ports:
  - name: http
    port: 80
    targetPort: 80
  type: ClusterIP
